--- a/W9_MvcProject/Views/Home/About.cshtml
+++ b/W9_MvcProject/Views/Home/About.cshtml
@@ -1,6 +1,39 @@
 ﻿@{
     ViewData["Title"] = "About";
 }
-<h1>@ViewData["Title"]</h1>
+<h1 class="text-center">@ViewData["Title"]</h1>
 
-<p>This website is a part of W9_MvcProject, created by <a href="https://github.com/AenuHub">Mehmet Özsığırtmaç</a>.</p>
+<div class="container mt-8">
+    <p class="text-center fw-bold">This website is a part of W9_MvcProject, created by 
+        <a href="https://github.com/AenuHub">Mehmet Özsığırtmaç</a>.</p>
+</div>
+
+<hr>
+
+<div class="container mt-8 pb-8">
+    <h2 class="text-center mb-4">Welcome to the <strong>Book Repository</strong>!</h2>
+
+    <p class="text-center">This platform serves as a comprehensive digital library for managing and exploring books. 
+        This .NET MVC application is designed to provide an intuitive and user-friendly experience for book 
+        enthusiasts and librarians alike.</p>
+
+    <hr>
+    <h3>Features:</h3>
+    <ul>
+        <li><strong>Explore the Collection:</strong> Browse the extensive list of books across diverse genres, 
+            from Fiction to Fantasy, Historical to Thriller. Each book entry provides detailed information, 
+            including its title, author, genre, publication date, ISBN, and availability.</li>
+        <li><strong>Add New Books and Authors:</strong> Easily expand the library by adding new books or registering 
+            new authors. This feature helps you to keep the collection up-to-date and relevant.</li>
+        <li><strong>Search and Filter:</strong> Find your favorite books using dynamic search and filtering tools, 
+            making it effortless to navigate the collection.</li>
+    </ul>
+
+    <h3>Technologies Used:</h3>
+    <ul>
+        <li><strong>ASP.NET MVC Framework:</strong> The backbone of the application, providing a robust and scalable 
+            structure for the web platform.</li>
+        <li><strong>Bootstrap for Responsive Design:</strong> Creating a seamless user experience across devices, 
+            from desktops to smartphones.</li>
+    </ul>
+</div>
