--- a/W9_MvcProject/Views/Home/About.cshtml
+++ b/W9_MvcProject/Views/Home/About.cshtml
@@ -6,12 +6,13 @@
 <div class="container mt-8">
     <p class="text-center fw-bold">This website is a part of W9_MvcProject, created by 
         <a href="https://github.com/AenuHub">Mehmet Özsığırtmaç</a>.</p>
+    <p class="text-center">This project is aiming to demonstrate the usage of .NET Core MVC in a real-world application.</p>
 </div>
 
 <hr>
 
 <div class="container mt-8 pb-8">
-    <h2 class="text-center mb-4">Welcome to the <strong>Book Repository</strong>!</h2>
+    <h3 class="text-center mb-4">Welcome to the Book Repository!</h3>
 
     <p class="text-center">This platform serves as a comprehensive digital library for managing and exploring books. 
         This .NET MVC application is designed to provide an intuitive and user-friendly experience for book 
