--- a/W9_MvcProject/Views/Home/About.cshtml
+++ b/W9_MvcProject/Views/Home/About.cshtml
@@ -1,12 +1,22 @@
 ﻿@{
     ViewData["Title"] = "About";
 }
-<h1 class="text-center">@ViewData["Title"]</h1>
+<div class="text-center">
+    <h1>@ViewData["Title"]</h1>
+    <strong>-- This website is a part of W9_MvcProject, created by
+        <a href="https://github.com/AenuHub">Mehmet Özsığırtmaç</a>. --</strong>
+</div>
 
-<div class="container mt-8">
-    <p class="text-center fw-bold">This website is a part of W9_MvcProject, created by 
-        <a href="https://github.com/AenuHub">Mehmet Özsığırtmaç</a>.</p>
-    <p class="text-center">This project is aiming to demonstrate the usage of .NET Core MVC in a real-world application.</p>
+<div class="container mt-8 pt-2 text-center">
+    <ul style="list-style-type: none">
+        <li>This project is aiming to demonstrate the usage of .NET Core MVC in a real-world application.</li>
+        <li>It includes a book repository where users can manage books and authors.</li>
+        <li>For testing purposes, instead of database connection, in-memory data is used to simulate a database in 
+            order to store book and author data.</li>
+        <li>In data, there are 50 authors and 200 books randomly generated using mockaroo.</li>
+        <li class="fw-bolder pt-2"><em>You can find the source code on 
+            <a href="https://github.com/AenuHub/W9_MvcProject">GitHub</a>.</em></li>
+    </ul>
 </div>
 
 <hr>
