--- a/W9_MvcProject/Views/Shared/_Layout.cshtml
+++ b/W9_MvcProject/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="~/W9_MvcProject.styles.css" asp-append-version="true"/>
 </head>
 <body>
-<header>
+<header class="container-fluid">
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container-fluid">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">W9_MvcProject</a>
