--- a/W9_MvcProject/Views/Home/Index.cshtml
+++ b/W9_MvcProject/Views/Home/Index.cshtml
@@ -2,9 +2,14 @@
     ViewData["Title"] = "Book Repository";
 }
 
-<div class="text-center">
-    <h2 class="display-5">Welcome to Book Repository</h2>
-    <p>Below is a list of books.</p>
+<div>
+    <h2 class="display-5 text-center">Welcome to Book Repository</h2>
+    <p  class="text-center">Below is a list of books.</p>
+    
+    <div class="text-center mb-3">
+        <p class="d-inline text-center m-4 fw-bold">You can use the Add New Book button to add a new book</p>
+        <a class="btn btn-primary" asp-controller="Book" asp-action="Add">Add new book</a>
+    </div>
     
     <table class="table table-striped table-bordered">
         <thead>
