--- a/W9_MvcProject/Views/Home/Index.cshtml
+++ b/W9_MvcProject/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <p  class="text-center">Below is a list of books.</p>
     
     <div class="text-center mb-3">
-        <p class="d-inline text-center m-4 fw-bold">You can use the Add New Book button to add a new book</p>
+        <p class="d-inline text-center m-3 fw-bold">You can use the button to add a new book to the repository</p>
         <a class="btn btn-primary" asp-controller="Book" asp-action="Add">Add new book</a>
     </div>
     
