--- a/W9_MvcProject/Views/Home/Index.cshtml
+++ b/W9_MvcProject/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
                     <td>@book.Title</td>
                     <td>@Data.Authors.Where(a => a.Id == book.AuthorId).First().GetFullName()</td>
                     <td>@book.PublishDate.ToShortDateString()</td>
-                    <td>@book.ISBN</td>
+                    <td>@book.Isbn</td>
                     <td>@book.CopiesAvailable</td>
                 </tr>
             }
