--- a/W9_MvcProject/Views/Book/Add.cshtml
+++ b/W9_MvcProject/Views/Book/Add.cshtml
@@ -4,33 +4,39 @@
     ViewData["Title"] = "Add Book";
 }
 
-<h2 class="display-5 text-center">Add Book</h2>
+<h2 class="display-6 fw-medium text-center">Add Book</h2>
 
-<form class="mt-3 m-4">
+<form method="post" class="mt-3 m-4">
     <div class="form-group">
-        <label class="form-label fw-bold">Book Title</label>
-        <input type="text" class="form-control">
+        <label asp-for="Title" class="form-label fw-bold"></label>
+        <input asp-for="Title" class="form-control">
+        <span asp-validation-for="Title" class="form-text text-danger"></span>
     </div>
     <div class="form-group mt-3">
-        <label class="form-label fw-bold">Author</label>
-        <input type="text" class="form-control">
+        <label asp-for="AuthorId" class="form-label fw-bold">Author</label>
+        <input asp-for="AuthorId" class="form-control">
+        <span asp-validation-for="AuthorId" class="form-text text-danger"></span>
     </div>
     <div class="form-group mt-3">
-        <label class="form-label fw-bold">Genre</label>
-        <input type="text" class="form-control">
+        <label asp-for="Genre" class="form-label fw-bold">Genre</label>
+        <input asp-for="Genre" class="form-control">
+        <span asp-validation-for="Genre" class="form-text text-danger"></span>
     </div>
     <div class="form-group mt-3">
-        <label class="form-label fw-bold">Publish Date</label>
-        <input type="text" class="form-control">
+        <label asp-for="PublishDate" class="form-label fw-bold">Publish Date</label>
+        <input asp-for="PublishDate" class="form-control">
+        <<span asp-validation-for="PublishDate" class="form-text text-danger"></span>
     </div>
     <div class="form-group mt-3">
-        <label class="form-label fw-bold">ISBN</label>
-        <input type="text" class="form-control">
+        <label asp-for="Isbn" class="form-label fw-bold">ISBN</label>
+        <input asp-for="Isbn" class="form-control">
+        <span asp-validation-for="Isbn" class="form-text text-danger"></span>
     </div>
     <div class="form-group mt-3">
-        <label class="form-label fw-bold">Copies Available</label>
-        <input type="text" class="form-control">
+        <label asp-for="CopiesAvailable" class="form-label fw-bold">Copies Available</label>
+        <input asp-for="CopiesAvailable" class="form-control">
+        <span asp-validation-for="CopiesAvailable" class="form-text text-danger"></span>
     </div>
     
-    <button class="btn btn-primary mt-3">Add new book</button>
+    <button type="submit" class="btn btn-primary mt-3">Add new book</button>
 </form>
