--- a/W9_MvcProject/Views/Book/Add.cshtml
+++ b/W9_MvcProject/Views/Book/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model Book
+﻿@model AddBookViewModel
 
 @{
     ViewData["Title"] = "Add Book";
@@ -13,27 +13,27 @@
         <span asp-validation-for="Title" class="form-text text-danger"></span>
     </div>
     <div class="form-group mt-3">
-        <label asp-for="AuthorId" class="form-label fw-bold">Author</label>
+        <label asp-for="AuthorId" class="form-label fw-bold"></label>
         <input asp-for="AuthorId" class="form-control">
         <span asp-validation-for="AuthorId" class="form-text text-danger"></span>
     </div>
     <div class="form-group mt-3">
-        <label asp-for="Genre" class="form-label fw-bold">Genre</label>
+        <label asp-for="Genre" class="form-label fw-bold"></label>
         <input asp-for="Genre" class="form-control">
         <span asp-validation-for="Genre" class="form-text text-danger"></span>
     </div>
     <div class="form-group mt-3">
-        <label asp-for="PublishDate" class="form-label fw-bold">Publish Date</label>
+        <label asp-for="PublishDate" class="form-label fw-bold"></label>
         <input asp-for="PublishDate" class="form-control">
         <<span asp-validation-for="PublishDate" class="form-text text-danger"></span>
     </div>
     <div class="form-group mt-3">
-        <label asp-for="Isbn" class="form-label fw-bold">ISBN</label>
+        <label asp-for="Isbn" class="form-label fw-bold"></label>
         <input asp-for="Isbn" class="form-control">
         <span asp-validation-for="Isbn" class="form-text text-danger"></span>
     </div>
     <div class="form-group mt-3">
-        <label asp-for="CopiesAvailable" class="form-label fw-bold">Copies Available</label>
+        <label asp-for="CopiesAvailable" class="form-label fw-bold"></label>
         <input asp-for="CopiesAvailable" class="form-control">
         <span asp-validation-for="CopiesAvailable" class="form-text text-danger"></span>
     </div>
