--- a/W9_MvcProject/Views/Book/Add.cshtml
+++ b/W9_MvcProject/Views/Book/Add.cshtml
@@ -25,7 +25,7 @@
     <div class="form-group mt-3">
         <label asp-for="PublishDate" class="form-label fw-bold"></label>
         <input asp-for="PublishDate" class="form-control">
-        <<span asp-validation-for="PublishDate" class="form-text text-danger"></span>
+        <span asp-validation-for="PublishDate" class="form-text text-danger"></span>
     </div>
     <div class="form-group mt-3">
         <label asp-for="Isbn" class="form-label fw-bold"></label>
