--- a/W9_MvcProject/Views/Home/Index.cshtml
+++ b/W9_MvcProject/Views/Home/Index.cshtml
@@ -29,10 +29,10 @@
                             <span style="display: flex; align-items: center; justify-content: center; flex: 1;">
                                 @book.Title
                             </span>
-                            <div style="display: flex; gap: 0.5rem;">
-                                <a class="btn btn-primary">Edit</a>
-                                <a class="btn btn-primary">Details</a>
-                                <a class="btn btn-danger">Delete</a>
+                            <div style="display: flex; gap: 0.5rem; margin-right: 1rem;">
+                                <a class="btn btn-sm btn-primary">Edit</a>
+                                <a class="btn btn-sm btn-success">Details</a>
+                                <a class="btn btn-sm btn-danger">Delete</a>
                             </div>
                         </div>
                     </td>
@@ -41,10 +41,10 @@
                             <span style="display: flex; align-items: center; justify-content: center; flex: 1;">
                                 @Data.Authors.FirstOrDefault(a => a.Id == book.AuthorId).GetFullName()
                             </span>
-                            <div style="display: flex; gap: 0.5rem;">
-                                <a class="btn btn-primary">Edit</a>
-                                <a class="btn btn-primary">Details</a>
-                                <a class="btn btn-danger">Delete</a>
+                            <div style="display: flex; gap: 0.5rem; margin-right: 1rem;">
+                                <a class="btn btn-sm btn-primary">Edit</a>
+                                <a class="btn btn-sm btn-success">Details</a>
+                                <a class="btn btn-sm btn-danger">Delete</a>
                             </div>
                         </div>
                     </td>
