--- a/W9_MvcProject/Views/Home/About.cshtml
+++ b/W9_MvcProject/Views/Home/About.cshtml
@@ -13,7 +13,9 @@
         <li>It includes a book repository where users can manage books and authors.</li>
         <li>For testing purposes, instead of database connection, in-memory data is used to simulate a database in 
             order to store book and author data.</li>
-        <li>In data, there are 20 authors and 50 books randomly generated using mockaroo.</li>
+        <li>In data, there are 20 authors and 50 books randomly generated using
+            <strong><a href="https://www.mockaroo.com/">mockaroo</a>.</strong>
+        </li>
         <li class="fw-bolder pt-2"><em>You can find the source code on 
             <a href="https://github.com/AenuHub/W9_MvcProject">GitHub</a>.</em></li>
     </ul>
