update links to open in new tab

--- a/W9_MvcProject/Views/Home/About.cshtml
+++ b/W9_MvcProject/Views/Home/About.cshtml
@@ -4,7 +4,7 @@
 <div class="text-center">
     <h1>@ViewData["Title"]</h1>
     <strong>-- This website is a part of W9_MvcProject, created by
-        <a href="https://github.com/AenuHub">Mehmet Özsığırtmaç</a>. --</strong>
+        <a href="https://github.com/AenuHub" target="_blank">Mehmet Özsığırtmaç</a>. --</strong>
 </div>
 
 <div class="container mt-8 pt-2 text-center">
@@ -14,10 +14,10 @@
         <li>For testing purposes, instead of database connection, in-memory data is used to simulate a database in 
             order to store book and author data.</li>
         <li>In data, there are 20 authors and 50 books randomly generated using
-            <strong><a href="https://www.mockaroo.com/">mockaroo</a>.</strong>
+            <strong><a href="https://www.mockaroo.com/" target="_blank">mockaroo</a>.</strong>
         </li>
         <li class="fw-bolder pt-2"><em>You can find the source code on 
-            <a href="https://github.com/AenuHub/W9_MvcProject">GitHub</a>.</em></li>
+            <a href="https://github.com/AenuHub/W9_MvcProject" target="_blank">GitHub</a>.</em></li>
     </ul>
 </div>
 
