--- a/W9_MvcProject/Views/Home/Index.cshtml
+++ b/W9_MvcProject/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
         <a class="btn btn-primary" asp-controller="Book" asp-action="Add">Add new book</a>
     </div>
     
-    <table class="table table-striped table-bordered table-hover text-center align-middle">
+    <table class="table table-striped table-bordered table-hover text-center align-middle w-75 mx-auto">
         <thead>
         <tr>
             <th scope="col">#</th>
@@ -20,36 +20,53 @@
         </tr>
         </thead>
         <tbody>
-            @foreach (var book in Data.Books)
-            {
-                <tr>
-                    <th scope="row">@book.Id</th>
-                    <td>
-                        <div style="display: flex; justify-content: space-between; align-items: center;">
-                            <span style="display: flex; align-items: center; justify-content: center; flex: 1;">
-                                @book.Title
-                            </span>
-                            <div style="display: flex; gap: 0.5rem; margin-right: 1rem;">
-                                <a class="btn btn-sm btn-primary">Edit</a>
-                                <a class="btn btn-sm btn-success">Details</a>
-                                <a class="btn btn-sm btn-danger">Delete</a>
-                            </div>
+        @foreach (var book in Data.Books)
+        {
+            <tr>
+                <th scope="row">@book.Id</th>
+                <td>
+                    <div style="display: flex; justify-content: space-between; align-items: center;">
+                        <span style="display: flex; align-items: center; justify-content: center; flex: 1;">
+                            @book.Title
+                        </span>
+                        <div style="display: flex; gap: 0.5rem; margin-right: 1rem;">
+                            <a class="btn btn-sm btn-primary btn-edit">Edit</a>
+                            <a class="btn btn-sm btn-secondary btn-details">Details</a>
+                            <a class="btn btn-sm btn-danger btn-delete">Delete</a>
                         </div>
-                    </td>
-                    <td>
-                        <div style="display: flex; justify-content: space-between; align-items: center;">
-                            <span style="display: flex; align-items: center; justify-content: center; flex: 1;">
-                                @Data.Authors.FirstOrDefault(a => a.Id == book.AuthorId).GetFullName()
-                            </span>
-                            <div style="display: flex; gap: 0.5rem; margin-right: 1rem;">
-                                <a class="btn btn-sm btn-primary">Edit</a>
-                                <a class="btn btn-sm btn-success">Details</a>
-                                <a class="btn btn-sm btn-danger">Delete</a>
-                            </div>
+                    </div>
+                </td>
+                <td>
+                    <div style="display: flex; justify-content: space-between; align-items: center;">
+                        <span style="display: flex; align-items: center; justify-content: center; flex: 1;">
+                            @Data.Authors.FirstOrDefault(a => a.Id == book.AuthorId).GetFullName()
+                        </span>
+                        <div style="display: flex; gap: 0.5rem; margin-right: 1rem;">
+                            <a class="btn btn-sm btn-primary btn-edit">Edit</a>
+                            <a class="btn btn-sm btn-secondary btn-details">Details</a>
+                            <a class="btn btn-sm btn-danger btn-delete">Delete</a>
                         </div>
-                    </td>
-                </tr>
-            }
+                    </div>
+                </td>
+            </tr>
+        }
         </tbody>
     </table>
 </div>
+
+<style>
+    .btn-edit {
+        background-color: #60b6ff;
+        border-color: #60b6ff;
+    }
+
+    .btn-details {
+        background-color: #bdb76b;
+        border-color: #bdb76b;
+    }
+
+    .btn-delete {
+        background-color: #ff5e5e;
+        border-color: #ff5e5e;
+    }
+</style>
