--- a/W9_MvcProject/Views/Book/Add.cshtml
+++ b/W9_MvcProject/Views/Book/Add.cshtml
@@ -6,37 +6,39 @@
 
 <h2 class="display-6 fw-medium text-center">Add Book</h2>
 
-<form method="post" class="mt-3 m-4">
-    <div class="form-group">
-        <label asp-for="Title" class="form-label fw-bold"></label>
-        <input asp-for="Title" class="form-control">
-        <span asp-validation-for="Title" class="form-text text-danger"></span>
-    </div>
-    <div class="form-group mt-3">
-        <label asp-for="AuthorId" class="form-label fw-bold"></label>
-        <input asp-for="AuthorId" class="form-control">
-        <span asp-validation-for="AuthorId" class="form-text text-danger"></span>
-    </div>
-    <div class="form-group mt-3">
-        <label asp-for="Genre" class="form-label fw-bold"></label>
-        <input asp-for="Genre" class="form-control">
-        <span asp-validation-for="Genre" class="form-text text-danger"></span>
-    </div>
-    <div class="form-group mt-3">
-        <label asp-for="PublishDate" class="form-label fw-bold"></label>
-        <input asp-for="PublishDate" class="form-control">
-        <span asp-validation-for="PublishDate" class="form-text text-danger"></span>
-    </div>
-    <div class="form-group mt-3">
-        <label asp-for="Isbn" class="form-label fw-bold"></label>
-        <input asp-for="Isbn" class="form-control">
-        <span asp-validation-for="Isbn" class="form-text text-danger"></span>
-    </div>
-    <div class="form-group mt-3">
-        <label asp-for="CopiesAvailable" class="form-label fw-bold"></label>
-        <input asp-for="CopiesAvailable" class="form-control">
-        <span asp-validation-for="CopiesAvailable" class="form-text text-danger"></span>
-    </div>
-    
-    <button type="submit" class="btn btn-primary mt-3">Add new book</button>
-</form>
+<div class="d-flex justify-content-center">
+    <form method="post" class="mt-3 m-4 w-75">
+        <div class="form-group">
+            <label asp-for="Title" class="form-label fw-bold"></label>
+            <input asp-for="Title" class="form-control">
+            <span asp-validation-for="Title" class="form-text text-danger"></span>
+        </div>
+        <div class="form-group mt-3">
+            <label asp-for="AuthorId" class="form-label fw-bold"></label>
+            <input asp-for="AuthorId" class="form-control">
+            <span asp-validation-for="AuthorId" class="form-text text-danger"></span>
+        </div>
+        <div class="form-group mt-3">
+            <label asp-for="Genre" class="form-label fw-bold"></label>
+            <input asp-for="Genre" class="form-control">
+            <span asp-validation-for="Genre" class="form-text text-danger"></span>
+        </div>
+        <div class="form-group mt-3">
+            <label asp-for="PublishDate" class="form-label fw-bold"></label>
+            <input asp-for="PublishDate" class="form-control">
+            <span asp-validation-for="PublishDate" class="form-text text-danger"></span>
+        </div>
+        <div class="form-group mt-3">
+            <label asp-for="Isbn" class="form-label fw-bold"></label>
+            <input asp-for="Isbn" class="form-control">
+            <span asp-validation-for="Isbn" class="form-text text-danger"></span>
+        </div>
+        <div class="form-group mt-3">
+            <label asp-for="CopiesAvailable" class="form-label fw-bold"></label>
+            <input asp-for="CopiesAvailable" class="form-control">
+            <span asp-validation-for="CopiesAvailable" class="form-text text-danger"></span>
+        </div>
+            
+        <button type="submit" class="btn btn-primary mt-3">Add new book</button>
+    </form>
+</div>
