--- a/W9_MvcProject/Views/Home/Index.cshtml
+++ b/W9_MvcProject/Views/Home/Index.cshtml
@@ -5,10 +5,20 @@
 <div>
     <h2 class="display-5 text-center">Welcome to Book Repository</h2>
     <p  class="text-center">Below is a list of books.</p>
-    
-    <div class="text-center mb-3">
-        <p class="d-inline text-center m-3 fw-bold">You can use the button to add a new book to the repository</p>
-        <a class="btn btn-primary" asp-controller="Book" asp-action="Add">Add new book</a>
+    <div class="d-flex justify-content-center align-items-center mb-4 w-75 mx-auto">
+        <div class="text-center mb-3" style="flex: 1;">
+            <p class="d-inline text-center m-3 fw-bold">You can use the button to add a new book to the repository</p>
+            <div class="d-flex justify-content-center mt-3">
+                <a class="btn btn-primary" asp-controller="Book" asp-action="Add">Add new book</a>
+            </div>
+        </div>
+        <div class="mx-3" style="border-left: 3px solid #000; height: 100%;"></div>
+        <div class="text-center mb-3" style="flex: 1;">
+            <p class="d-inline text-center m-3 fw-bold">You can use the button to add a new author to the repository</p>
+            <div class="d-flex justify-content-center mt-3">
+                <a class="btn btn-primary" asp-controller="Book" asp-action="Add">Add new author</a>
+            </div>
+        </div>
     </div>
     
     <table class="table table-striped table-bordered table-hover text-center align-middle w-75 mx-auto">
