--- a/W9_MvcProject/Views/Home/Index.cshtml
+++ b/W9_MvcProject/Views/Home/Index.cshtml
@@ -3,79 +3,24 @@
 }
 
 <div>
-    <h2 class="display-5 text-center">Welcome to Book Repository</h2>
-    <p  class="text-center">Below is a list of books.</p>
-    <div class="d-flex justify-content-center align-items-center mb-4 w-75 mx-auto">
-        <div class="text-center mb-3" style="flex: 1;">
-            <p class="d-inline text-center m-3 fw-bold">You can use the button to add a new book to the repository</p>
-            <div class="d-flex justify-content-center mt-3">
-                <a class="btn btn-primary" asp-controller="Book" asp-action="Add">Add new book</a>
-            </div>
+    <h2 class="display-6 fw-medium text-center">Welcome to the Book Repository</h2>
+    <p  class="text-center">You can find, edit and delete all the books and authors in the repository.</p>
+    
+    <div style="display: flex; justify-content: center; align-items: center;">
+        <div style="margin-right: 10px";>
+            <a asp-controller="Book" asp-action="List" class="btn btn-primary">List of books</a>
         </div>
-        <div class="mx-3" style="border-left: 3px solid #000; height: 100%;"></div>
-        <div class="text-center mb-3" style="flex: 1;">
-            <p class="d-inline text-center m-3 fw-bold">You can use the button to add a new author to the repository</p>
-            <div class="d-flex justify-content-center mt-3">
-                <a class="btn btn-primary" asp-controller="Book" asp-action="Add">Add new author</a>
-            </div>
+        <div>
+            <a class="btn btn-primary">List of authors</a>
         </div>
     </div>
-    
-    <table class="table table-striped table-bordered table-hover text-center align-middle w-75 mx-auto">
-        <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">Title</th>
-            <th scope="col">Author</th>
-        </tr>
-        </thead>
-        <tbody>
-        @foreach (var book in Data.Books)
-        {
-            <tr>
-                <th scope="row">@book.Id</th>
-                <td>
-                    <div style="display: flex; justify-content: space-between; align-items: center;">
-                        <span style="display: flex; align-items: center; justify-content: center; flex: 1;">
-                            @book.Title
-                        </span>
-                        <div style="display: flex; gap: 0.5rem; margin-right: 1rem;">
-                            <a class="btn btn-sm btn-primary btn-edit" asp-controller="Book" asp-action="Edit" asp-route-id="@book.Id">Edit</a>
-                            <a class="btn btn-sm btn-secondary btn-details" asp-controller="Book" asp-action="Details" asp-route-id="@book.Id">Details</a>
-                            <a class="btn btn-sm btn-danger btn-delete" asp-controller="Book" asp-action="Delete" asp-route-id="@book.Id">Delete</a>
-                        </div>
-                    </div>
-                </td>
-                <td>
-                    <div style="display: flex; justify-content: space-between; align-items: center;">
-                        <span style="display: flex; align-items: center; justify-content: center; flex: 1;">
-                            @Data.Authors.FirstOrDefault(a => a.Id == book.AuthorId).GetFullName()
-                        </span>
-                        <div style="display: flex; gap: 0.5rem; margin-right: 1rem;">
-                            <a class="btn btn-sm btn-primary btn-edit">Edit</a>
-                            <a class="btn btn-sm btn-secondary btn-details">Details</a>
-                        </div>
-                    </div>
-                </td>
-            </tr>
-        }
-        </tbody>
-    </table>
+    <p class="text-center mt-4">You can also add new books and authors in the repository.</p>
+    <div style="display: flex; justify-content: center; align-items: center;">
+        <div style="margin-right: 10px";>
+            <a class="btn btn-primary">Add new book</a>
+        </div>
+        <div>
+            <a class="btn btn-primary">Add new author</a>
+        </div>
+    </div>
 </div>
-
-<style>
-    .btn-edit {
-        background-color: #60b6ff;
-        border-color: #60b6ff;
-    }
-
-    .btn-details {
-        background-color: #bdb76b;
-        border-color: #bdb76b;
-    }
-
-    .btn-delete {
-        background-color: #ff5e5e;
-        border-color: #ff5e5e;
-    }
-</style>
