--- a/W9_MvcProject/Views/Book/List.cshtml
+++ b/W9_MvcProject/Views/Book/List.cshtml
@@ -38,7 +38,7 @@
                 <div style="display: flex; gap: 0.5rem; justify-content: center; margin-right: 1rem;">
                     <a class="btn btn-sm btn-primary btn-edit" asp-controller="Book" asp-action="Edit" asp-route-id="@book.Id">Edit</a>
                     <a class="btn btn-sm btn-secondary btn-details" asp-controller="Book" asp-action="Details" asp-route-id="@book.Id">Details</a>
-                    <a class="btn btn-sm btn-danger btn-delete" asp-controller="Book" asp-action="Delete" asp-route-id="@book.Id">Delete</a>
+                    <a class="btn btn-sm btn-danger btn-delete" asp-controller="Book" asp-action="DeleteConfirm" asp-route-id="@book.Id">Delete</a>
                 </div>
             </td>
         </tr>
