--- a/W9_MvcProject/Views/Book/DeleteConfirm.cshtml
+++ b/W9_MvcProject/Views/Book/DeleteConfirm.cshtml
@@ -15,9 +15,10 @@
         <li><strong>Copies Available:</strong> @Model.CopiesAvailable</li>
     </ul>
     <p class="text-danger">Are you sure to delete this book from repository?</p>
-    <form asp-controller="Book" asp-action="Delete" method="post">
+    <form asp-controller="Book" asp-action="Delete" method="post" style="display: flex;">
         <input type="hidden" name="Id" value="@Model.Id" />
-        <button type="submit" class="btn btn-sm btn-primary btn-edit">Delete Book</button>
+        <button type="submit" class="btn btn-sm btn-danger btn-edit">Delete Book</button>
+        <a asp-controller="Book" asp-action="List" class="btn btn-sm btn-secondary btn-edit">Cancel</a>
     </form>
 </div>
 
@@ -55,7 +56,7 @@
     }
 
     .btn-edit {
-        background-color: #60b6ff;
+        background-color: #ff784d;
         border-color: #60b6ff;
         display: block;
         margin: 0 auto;
