edit button text

--- a/W9_MvcProject/Views/Book/Edit.cshtml
+++ b/W9_MvcProject/Views/Book/Edit.cshtml
@@ -39,6 +39,6 @@
             <span asp-validation-for="CopiesAvailable" class="form-text text-danger"></span>
         </div>
 
-        <button type="submit" class="btn btn-primary mt-3">Add new book</button>
+        <button type="submit" class="btn btn-primary mt-3">Edit book</button>
     </form>
 </div>
