--- a/W9_MvcProject/Views/Home/Index.cshtml
+++ b/W9_MvcProject/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
             <a asp-controller="Book" asp-action="List" class="btn btn-primary">List of books</a>
         </div>
         <div>
-            <a class="btn btn-primary">List of authors</a>
+            <a asp-controller="Author" asp-action="List" class="btn btn-primary">List of authors</a>
         </div>
     </div>
     <p class="text-center mt-4">You can also add new books and authors in the repository.</p>
