--- a/W9_MvcProject/Views/Author/Edit.cshtml
+++ b/W9_MvcProject/Views/Author/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit Author";
 }
 
-<h2 class="display-6 fw-medium text-center">Edit Book</h2>
+<h2 class="display-6 fw-medium text-center">Edit Author</h2>
 
 <div class="d-flex justify-content-center">
     <form method="post" class="mt-3 m-4 w-75">
@@ -24,6 +24,21 @@
             <span asp-validation-for="DateOfBirth" class="form-text text-danger"></span>
         </div>
 
-        <button type="submit" class="btn btn-primary mt-3">Edit author</button>
+        <div class="mt-3" style="display: flex; align-items: center; gap: 10px;">
+            <button type="submit" class="btn btn-primary btn-edit">Edit author</button>
+            <a asp-controller="Author" asp-action="List" class="btn btn-secondary btn-cancel">Cancel</a>
+        </div>
     </form>
 </div>
+
+<style>
+    .btn-edit {
+        background-color: #60b6ff;
+        border-color: #60b6ff;
+    }
+
+    .btn-cancel {
+        background-color: #ff5e5e;
+        border-color: #ff5e5e;
+    }
+</style>
