--- a/W9_MvcProject/Views/Book/Edit.cshtml
+++ b/W9_MvcProject/Views/Book/Edit.cshtml
@@ -38,7 +38,22 @@
             <input asp-for="CopiesAvailable" class="form-control">
             <span asp-validation-for="CopiesAvailable" class="form-text text-danger"></span>
         </div>
-
-        <button type="submit" class="btn btn-primary mt-3">Edit book</button>
+        
+        <div class="mt-3" style="display: flex; align-items: center; gap: 10px;">
+            <button type="submit" class="btn btn-primary btn-edit">Edit book</button>
+            <a asp-controller="Book" asp-action="List" class="btn btn-secondary btn-cancel">Cancel</a>
+        </div>
     </form>
 </div>
+
+<style>
+    .btn-edit {
+        background-color: #60b6ff;
+        border-color: #60b6ff;
+    }
+
+    .btn-cancel {
+        background-color: #ff5e5e;
+        border-color: #ff5e5e;
+    }
+</style>
