--- a/W9_MvcProject/Views/Home/Index.cshtml
+++ b/W9_MvcProject/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div>
     <h2 class="display-6 fw-medium text-center">Welcome to the Book Repository</h2>
-    <p  class="text-center">You can find, edit and delete all the books and authors in the repository.</p>
+    <p  class="text-center">You can list, edit and delete the books and authors in the repository.</p>
     
     <div style="display: flex; justify-content: center; align-items: center;">
         <div style="margin-right: 10px";>
