--- a/W9_MvcProject/Views/Book/Add.cshtml
+++ b/W9_MvcProject/Views/Book/Add.cshtml
@@ -15,7 +15,9 @@
         </div>
         <div class="form-group mt-3">
             <label asp-for="AuthorId" class="form-label fw-bold"></label>
-            <input asp-for="AuthorId" class="form-control">
+            <select asp-for="AuthorId" asp-items="@Data.GetAuthors()" class="form-select">
+                <option value="">Choose author</option>
+            </select>
             <span asp-validation-for="AuthorId" class="form-text text-danger"></span>
         </div>
         <div class="form-group mt-3">
