--- a/W9_MvcProject/Views/Home/Index.cshtml
+++ b/W9_MvcProject/Views/Home/Index.cshtml
@@ -17,10 +17,10 @@
     <p class="text-center mt-4">You can also add new books and authors in the repository.</p>
     <div style="display: flex; justify-content: center; align-items: center;">
         <div style="margin-right: 10px";>
-            <a class="btn btn-primary">Add new book</a>
+            <a asp-controller="Book" asp-action="Add" class="btn btn-primary">Add new book</a>
         </div>
         <div>
-            <a class="btn btn-primary">Add new author</a>
+            <a asp-controller="Author" asp-action="Add" class="btn btn-primary">Add new author</a>
         </div>
     </div>
 </div>
