--- a/W9_MvcProject/Views/Shared/_Layout.cshtml
+++ b/W9_MvcProject/Views/Shared/_Layout.cshtml
@@ -10,35 +10,35 @@
     <link rel="stylesheet" href="~/W9_MvcProject.styles.css" asp-append-version="true"/>
 </head>
 <body>
-<header class="container-fluid">
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+<header class="container-fluid border-bottom">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white ms-auto me-auto" style="max-width: 960px;">
         <div class="container-fluid">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">W9_MvcProject</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+            <div class="navbar-collapse collapse d-sm-inline-flex align-items-center justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        <a class="nav-link text-dark fs-5" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
+                        <a class="nav-link text-dark fs-5" asp-area="" asp-controller="Home" asp-action="About">About</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 </header>
-<div class="container">
+<div class="container pt-3">
     <main role="main" class="pb-3">
         @RenderBody()
     </main>
 </div>
 
-<footer class="border-top footer text-muted">
-    <div class="container">
+<footer class="border-top footer text-muted fixed-bottom">
+    <div class="container d-flex justify-content-start align-items-center" style="max-width: 960px; height: 50px;">
         &copy; 2024 - W9_MvcProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
     </div>
 </footer>
