--- a/W9_MvcProject/Views/Shared/_Layout.cshtml
+++ b/W9_MvcProject/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 </head>
 <body>
 <header class="container-fluid border-bottom">
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white ms-auto me-auto" style="max-width: 960px;">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white ms-auto me-auto" style="max-width: 1320px;">
         <div class="container-fluid">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">W9_MvcProject</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -37,9 +37,12 @@
     </main>
 </div>
 
-<footer class="border-top footer text-muted fixed-bottom">
-    <div class="container d-flex justify-content-start align-items-center" style="max-width: 960px; height: 50px;">
-        &copy; 2024 - W9_MvcProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+<hr style="position: absolute; bottom: 40px; width: 100%; border: 1px solid #333;" />
+<footer class="footer mt-auto py-3">
+    <div class="container d-flex justify-content-start align-items-center" 
+         style="max-width: 1320px; height: 50px; position: absolute; bottom: 0; left: 0; right: 0;">
+        @DateTime.Now.Year - <strong>&nbsp;<a href="https://github.com/AenuHub" target="_blank">Mehmet Özsığırtmaç</a>&nbsp;</strong> 
+        - All Rights Reserved &copy;
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
