--- a/W9_MvcProject/Views/Book/Add.cshtml
+++ b/W9_MvcProject/Views/Book/Add.cshtml
@@ -32,7 +32,7 @@
         </div>
         <div class="form-group mt-3">
             <label asp-for="Isbn" class="form-label fw-bold"></label>
-            <input asp-for="Isbn" class="form-control">
+            <input asp-for="Isbn" class="form-control" placeholder="Enter ISBN number (e.g. 978-3-16-148410-0 with hyphens)">
             <span asp-validation-for="Isbn" class="form-text text-danger"></span>
         </div>
         <div class="form-group mt-3">
