--- a/W9_MvcProject/Views/Shared/_Layout.cshtml
+++ b/W9_MvcProject/Views/Shared/_Layout.cshtml
@@ -37,14 +37,7 @@
     </main>
 </div>
 
-<hr style="position: absolute; bottom: 40px; width: 100%; border: 1px solid #333;" />
-<footer class="footer mt-auto py-3">
-    <div class="container d-flex justify-content-start align-items-center" 
-         style="max-width: 1320px; height: 50px; position: absolute; bottom: 0; left: 0; right: 0;">
-        @DateTime.Now.Year - <strong>&nbsp;<a href="https://github.com/AenuHub" target="_blank">Mehmet Özsığırtmaç</a>&nbsp;</strong> 
-        - All Rights Reserved &copy;
-    </div>
-</footer>
+<partial name="_FooterPartial"></partial>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
