--- a/W9_MvcProject/Views/Home/About.cshtml
+++ b/W9_MvcProject/Views/Home/About.cshtml
@@ -36,8 +36,9 @@
         <li><strong>Explore the Collection:</strong> Browse the extensive list of books across diverse genres, 
             from Fiction to Fantasy, Historical to Thriller. Each book entry provides detailed information, 
             including its title, author, genre, publication date, ISBN, and availability.</li>
-        <li><strong>Add New Books and Authors:</strong> Easily expand the library by adding new books or registering 
-            new authors. This feature helps you to keep the collection up-to-date and relevant.</li>
+        <li><strong>Manage the Collection:</strong> Easily expand the library by adding new books or registering 
+            new authors. With a user-friendly interface, you can add books, authors, and genres to the collection. 
+            This feature helps you to keep the collection up-to-date and relevant. You can also edit or delete existing entries.</li>
     </ul>
 
     <h3>Technologies Used:</h3>
